Bug 256084 - view RDF as XML, not as broken-looking text that claims to be XUL, r+sr=bz